# SaveYourLifeLBP

./: .gitignore  CMakeLists.txt  MaskLabel.h  distance.cpp  distance.h  main.cpp  predict.cpp  predict.h  training.cpp  training.h  utils.cpp  utils.h
model/: imageModel.cpp  imageModel.h
